# Batalha_Naval_PLP

./: .gitignore  Cargo.toml  MenuPrincipal.tscn  README.md  TelaLogin.tscn  ap (1).png.import  project.godot  tela_login.gd  tela_login.gd.uid  usuario_logado_overlay.gd  usuario_logado_overlay.gd.uid  v_box_container.gd
scenes/: button.tscn  cena-batalha.tscn  cena_batalha.gd  linha_jogador.tscn  tela_ranking.tscn
src/: lib.rs
src/application/: app_paths.rs  controlador_batalha.rs  fase_posicionamento.rs  gerenciador_interface.rs  gerenciador_turnos.rs  mod.rs
src/application/controlador_batalha/: internal.rs  mod.rs
src/application/helpers/: conversao_coordenadas.rs  coordenadas.rs  cursor.rs  mod.rs
src/application/nodes/: usuario_node.rs
src/application/services/: auth_service.rs
src/domain/: disparo.rs  jogador.rs  jogador_ia.rs  tabuleiro.rs
src/domain/repositorios/: repositorio_usuario.rs
src/infrastructure/: repositorio_usuario_json.rs
src/presentation/: cena_conquistas.rs  cena_fim_de_jogo.rs  cena_ranking.rs  mod.rs
src/presentation/batalha/renderizacao_tabuleiro/: atlas_tiles.rs  navio_tiles.rs  renderer_tabuleiro.rs
textures/: borda-topo.png.import  bordas.png.import  marcador.png.import  smoke.png.import
