[package]
name = "batalha_naval_plp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = "0.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
